MDEV-29709 Unexpected ER_NO_SUCH_TABLE on CREATE OR REPLACE 	   with further assertion failures

CREATE .. LIKE generates CREATE TABLE statement (without LIKE). See
comment in mysql_create_like_table() for details:

      The logging for CREATE .. LIKE is a bit different from normal
      create as we want in statement-based logging use the original
      statement.

To generate that statement it opens the table and runs
show_create_table_ex(). For atomic C-O-R it is a bit difficult because
the table is temporary. The original code used a hack to open the
temporary table like a normal table via open_table(). This hack
doesn't work properly as the normal open does name mangling: in
alloc_table_share() we don't pass any flags to
build_table_filename(). That leads to frm not found during the
discovery. The original code also didn't release explicit MDL lock
(the part of the hack) in case of errors.

The current patch replaces that hack with the proper call of
create_and_open_tmp_table(). For that we must know frm and path which
we pass back from mysql_create_table_no_lock(). That required a little
modification of its interface.